<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--RESOURCES-->
    <string name="app_name">Sedlex</string>
    <string name="loading">Loading&#8230;</string>
    <string name="content_description">content description</string>

    <!--MAIN ACTIVITY-->
    <string name="activity_title">Law title unknown</string>
    <string name="activity_summary">Law summary unknown</string>
    <string name="activity_initiative">"?"</string>
    <string name="activity_category">Category unknown</string>



    <!--DETAILS ACTIVITY-->
    <string name="detail_title">Principales dispositions</string>
    <string name="detail_debats">Débats</string>

    <string name="detail_button_approve">Pour</string>
    <string name="detail_button_disapprove">Contre</string>

    <string name="detail_link_title">Link title unknown</string>
    <string name="detail_link_summary">Link summary unknown</string>

    <!--DEBATES ACTIVITY-->
    <string name="debates_deputy_stamp_unknown">"?"</string>
    <string name="debates_deputy_name_unknown">Name unknown</string>
    <string name="debates_text_level_one">Abilities or he perfectly pretended so strangers be exquisite.</string>
    <string name="debates_text_level_two_top">Abilities or he perfectly pretended so strangers be exquisite. Oh to another chamber pleased imagine do in. Went me rank at last loud shot an draw. Excellent so to no sincerity smallness. Removal request delight if on he we. Unaffected in we by apartments astonished to decisively themselves. Offended ten old consider speaking... </string>
    <string name="debates_text_level_two_bottom">...Sex and neglected principle ask rapturous consulted. Object remark lively all did feebly excuse our wooded. Old her object chatty regard vulgar missed. Speaking throwing breeding betrayed children my to. Me marianne no he horrible produced ye. Sufficient unpleasing an insensible motionless if introduced ye. Now give nor both come near many late.</string>
    <string name="debates_text_level_three">Abilities or he perfectly pretended so strangers be exquisite. Oh to another chamber pleased imagine do in. Went me rank at last loud shot an draw. Excellent so to no sincerity smallness. Removal request delight if on he we. Unaffected in we by apartments astonished to decisively themselves. Offended ten old consider speaking. Bed sincerity yet therefore forfeited his certainty neglected questions. Pursuit chamber as elderly amongst on. Distant however warrant farther to of. My justice wishing prudent waiting in be. Comparison age not pianoforte increasing delightful now. Insipidity sufficient dispatched any reasonably led ask. Announcing if attachment resolution sentiments admiration me on diminution. Was certainty remaining engrossed applauded sir how discovery. Settled opinion how enjoyed greater joy adapted too shy. Now properly surprise expenses interest nor replying she she. Bore tall nay many many time yet less. Doubtful for answered one fat indulged margaret sir shutters together. Ladies so in wholly around whence in at. Warmth he up giving oppose if. Impossible is dissimilar entreaties oh on terminated. Earnest studied article country ten respect showing had. But required offering him elegance son improved informed. Sex and neglected principle ask rapturous consulted. Object remark lively all did feebly excuse our wooded. Old her object chatty regard vulgar missed. Speaking throwing breeding betrayed children my to. Me marianne no he horrible produced ye. Sufficient unpleasing an insensible motionless if introduced ye. Now give nor both come near many late. Bed sincerity yet therefore forfeited his certainty neglected questions. Pursuit chamber as elderly amongst on. Distant however warrant farther to of. My justice wishing prudent waiting in be. Comparison age not pianoforte increasing delightful now. Insipidity sufficient dispatched any reasonably led ask. Announcing if attachment resolution sentiments admiration me on diminution. </string>
    <string name="debates_empty">No debates to show.</string>

    <string name="parti_ps">PS</string>
    <string name="parti_ump">UMP</string>
    <string name="parti_udi">UDI</string>
    <string name="parti_vert">Ve</string>
    <string name="parti_radicaux">Ra</string>
    <string name="parti_communiste">Co</string>

    <string name="depot">Dépôt</string>
    <string name="examen">Examen</string>
    <string name="adoption">Adoption</string>
</resources>
