<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/debates_row">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/debates_layout_title"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/debates_deputy_stamp"
            android:layout_width="38dp"
            android:layout_marginRight="10dp"
            android:layout_height="38dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/circle"
            android:text="@string/debates_deputy_stamp_unknown"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textSize="17sp" >
        </TextView>

        <TextView
            android:id="@+id/debates_deputy_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:text="@string/debates_deputy_name_unknown"
            android:textSize="16sp" >
        </TextView>
    </LinearLayout>

    <!--TEXT LEVEL 1 - COMPRESSED-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/debates_text_level_one"
        android:layout_below="@+id/debates_layout_title"
        android:textSize="12sp"
        android:text="@string/debates_text_level_one"/>

    <!--TEXT LEVEL 2 - SEMI-EXPENDED-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/debates_layout_level_two"
        android:layout_below="@+id/debates_layout_title"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/debates_text_level_two_top"
            android:textSize="12sp"
            android:text="@string/debates_text_level_two_top"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/debates_layout_level_two_separator"
            android:layout_margin="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:background="@color/grey"/>
            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/debates_text_level_two_button"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:background="@color/grey"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/debates_text_level_two_bottom"
            android:textSize="12sp"
            android:text="@string/debates_text_level_two_bottom"/>
    </LinearLayout>

    <!--TEXT LEVEL 3 - EXPENDED-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/debates_text_level_three"
        android:layout_below="@+id/debates_layout_title"
        android:textSize="12sp"
        android:text="@string/debates_text_level_three"
        android:visibility="gone"/>

</RelativeLayout>